RESOLVED FIXED 84575
REGRESSION(r114870): Performance hit on DOM/CloneNodes and DOM/CreateNodes.
https://bugs.webkit.org/show_bug.cgi?id=84575
Summary REGRESSION(r114870): Performance hit on DOM/CloneNodes and DOM/CreateNodes.
Andreas Kling
Reported 2012-04-23 01:28:07 PDT
This appears to be caused by ElementAttributeData::setAttributes() which does m_attributes.resize() before cloning attributes one by one. The resize() fills the attribute vector with default-constructed objects (incurring hash lookups for QualifiedNames and whatnot.)
Attachments
Patch (1.91 KB, patch)
2012-04-23 01:31 PDT, Andreas Kling
no flags
Andreas Kling
Comment 1 2012-04-23 01:31:18 PDT
Antti Koivisto
Comment 2 2012-04-23 01:33:10 PDT
Comment on attachment 138308 [details] Patch r=me
Andreas Kling
Comment 3 2012-04-23 01:40:27 PDT
Comment on attachment 138308 [details] Patch Clearing flags on attachment: 138308 Committed r114879: <http://trac.webkit.org/changeset/114879>
Andreas Kling
Comment 4 2012-04-23 01:40:35 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.