REGRESSION(r114870): Performance hit on DOM/CloneNodes and DOM/CreateNodes. <http://webkit.org/b/84575>

Reviewed by Antti Koivisto.

Simplify the cloning of Attributes from one Element to another by simply
assigning to m_attributes. This avoids default-constructing a bunch of
Attribute objects that we overwrite immediately anyway (this used to be
fine because they were RefPtr<Attribute> but now that a default-constructed
Attribute contains a QualifiedName, we were doing a bunch of extra hash
lookups, etc.)

* dom/ElementAttributeData.cpp:
(WebCore::ElementAttributeData::setAttributes):

Canonical link: https://commits.webkit.org/102064@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114879 268f45cc-cd09-0410-ab3c-d52691b4dbfc